[package]
name = "conways_game_of_life"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winit = "0.26.1"
pixels = "0.9.0"
winit_input_helper = "0.12.0"
line_drawing = "1.0"
twang = "0.8.0"
fon = "0.6.0"
rodio = "0.14.0"